Добавил поле name
