# docs/swagger.json
@@ -96,6 +96,22 @@
                     "Data"
                 ],
                 "summary": "Update binary data",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Data ID",
+                        "name": "dataId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Response",
@@ -136,6 +152,24 @@
                     "Data"
                 ],
                 "summary": "Add text data",
+                "parameters": [
+                    {
+                        "description": "Body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.AddTextData"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Response",
@@ -176,6 +210,31 @@
                     "Data"
                 ],
                 "summary": "Update text data",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Data ID",
+                        "name": "dataId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.AddTextData"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Response",
@@ -216,6 +275,22 @@
                     "Data"
                 ],
                 "summary": "Get data by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Data ID",
+                        "name": "dataId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Response",
@@ -260,6 +335,22 @@
                     "Data"
                 ],
                 "summary": "Delete data",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Data ID",
+                        "name": "dataId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Response",
@@ -398,6 +489,22 @@
         }
     },
     "definitions": {
+        "model.AddTextData": {
+            "type": "object",
+            "required": [
+                "data",
+                "name"
+            ],
+            "properties": {
+                "data": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 250
+                }
+            }
+        },
         "model.DataResponse": {
             "type": "object",
             "properties": {
@@ -409,6 +516,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 },
                 "type": {
                     "$ref": "#/definitions/model.DataTypeEnum"
@@ -457,7 +567,7 @@
                 },
                 "password": {
                     "type": "string",
-                    "maxLength": 130
+                    "maxLength": 250
                 }
             }
         },
